--- a/server/app/templates/dashboard.html
+++ b/server/app/templates/dashboard.html
@@ -384,7 +384,7 @@
                 </svg>
               </div>
               <h3 class="mb-2 text-xl font-bold dark:text-white">
-                описание
+                Oписание
               </h3>
               <p class="text-gray-500 dark:text-gray-400">${workout.description}</p>
             </div>
