--- a/server/app/templates/workout.html
+++ b/server/app/templates/workout.html
@@ -24,102 +24,194 @@
         <div>Workout Name: <span id="workout-name"></span></div>
         <div>Exercise Name: <span id="exercise-name"></span></div>
         <div>Timer: <span id="timer">0:00</span></div>
+        <div hidden id="rest-timer-container">
+          Rest Time: <span id="rest-timer">0</span>
+        </div>
         <div>Repitions: <span id="repetition-count">0</span></div>
         <video id="video" class="h-[60%]" autoplay></video>
       </div>
 
       <div class="flex w-[20%]">
-        <video id="helper-video" src="" class="" loop autoplay controls muted playsinline></video>
+        <video
+          id="helper-video"
+          src=""
+          class=""
+          loop
+          autoplay
+          controls
+          muted
+          playsinline
+        ></video>
       </div>
 
-      <img id="received-img" src="" alt="Received Image" style="display:block; width:100%; max-width: 640px;">
+      <img
+        id="received-img"
+        src=""
+        alt="Received Image"
+        style="display: block; width: 100%; max-width: 640px"
+      />
     </main>
 
     <script>
-      (async () => {
-        const accessToken = localStorage.getItem("access_token");
-        if (!accessToken) {
-          console.error("Access token not found");
-          alert("Access token not found");
-          window.location.href = "/login";
-          return;
-        }
+      let workout;
+      let startTime;
+      let endTime;
+      let seconds = 0;
+      let minutes = 0;
+      let isResting = false;
+      let restTimer = 0;
+      let repetitions = 0;
+      const fps = 20;
+      const interval = 1000 / fps;
+      const accessToken = localStorage.getItem("access_token");
+      const workoutId = window.location.pathname.split("/").pop();
+      const video = document.getElementById("video");
+      const receivedImg = document.getElementById("received-img");
+      const repetitionsCountElement =
+        document.getElementById("repetition-count");
+      const restTimerElement = document.getElementById("rest-timer");
+      const timerElement = document.getElementById("timer");
+      const protocol = window.location.protocol === "https:" ? "wss" : "ws";
+      const ws = new WebSocket(
+        `${protocol}://${window.location.host}/api/v1/ws`
+      );
 
-        // This id comes verified from the server
-        const workout_id = window.location.pathname.split("/").pop();
+      if (!accessToken) {
+        console.error("Access token not found");
+        alert("Access token not found");
+        window.location.href = "/login";
+      }
 
-      if (Number.isNaN(parseInt(workout_id))) {
+      if (Number.isNaN(parseInt(workoutId))) {
         console.error("Invalid workout id");
         alert("Invalid workout id");
         window.location.href = "/dashboard";
       }
 
-        // get the workout details
-        let {res, data} = await getWorkoutData(accessToken, workout_id);
+      function updateTimer() {
+        if (isResting) {
+          return;
+        }
+        seconds++;
+        if (seconds === 60) {
+          seconds = 0;
+          minutes++;
+        }
+        timerElement.innerText = `${minutes}:${
+          seconds < 10 ? "0" : ""
+        }${seconds}`;
+      }
+
+      (async () => {
+        let { res, data } = await getWorkoutData(accessToken, workoutId);
         if (res.status !== 200) {
           console.error("Failed to get workout data");
           alert((data && data.detail) || "Failed to get workout data");
           window.location.href = "/dashboard";
           return;
         }
-        
+        workout = data;
+
         document.getElementById("workout-name").innerText = data.name;
         document.getElementById("exercise-name").innerText = data.exercise.name;
-        document.getElementById("helper-video").src = `../../static/videos/${data.exercise.video_link}`;
-      })();
-    </script>
+        document.getElementById(
+          "helper-video"
+        ).src = `../../static/videos/${data.exercise.video_link}`;
+        restTimer = data.rest_time;
 
-    <script>
-      const video = document.getElementById("video");
-      const receivedImg = document.getElementById('received-img');
-      const repetitionsCountElement = document.getElementById("repetition-count");
-      const timerElement = document.getElementById("timer");
-      const protocol = window.location.protocol === "https:" ? "wss" : "ws";
-      const ws = new WebSocket(`${protocol}://${window.location.host}/api/v1/ws`);
-
-      let seconds = 0;
-      let minutes = 0;
-
-      function updateTimer() {
-        seconds++;
-        if (seconds === 60) {
-          seconds = 0;
-          minutes++;
+        // start the video stream when we have the workout data
+        if (navigator.mediaDevices.getUserMedia) {
+          navigator.mediaDevices
+            .getUserMedia({ video: true })
+            .then(function (stream) {
+              video.srcObject = stream;
+            })
+            .catch(function (err) {
+              console.log("Что-то пошло не так!", err);
+            });
         }
-        timerElement.innerText = `${minutes}:${seconds < 10 ? "0" : ""}${seconds}`;
-      }
-
-      if (navigator.mediaDevices.getUserMedia) {
-        navigator.mediaDevices
-          .getUserMedia({ video: true })
-          .then(function (stream) {
-            video.srcObject = stream;
-          })
-          .catch(function (err) {
-            console.log("Что-то пошло не так!", err);
-          });
-      }
+      })();
 
       ws.onmessage = function (event) {
         const message = JSON.parse(event.data);
 
         if (message.type === "image") {
-            receivedImg.src = `data:image/jpeg;base64,${message.data}`
+          receivedImg.src = `data:image/jpeg;base64,${message.data}`;
         } else if (message.type === "count") {
-            repetitionsCountElement.innerText = message.data;
+          repetitionsCountElement.innerText = message.data;
+          repetitions = parseInt(message.data);
         }
       };
 
+      function startRestPeriod() {
+        isResting = true;
+        document
+          .getElementById("rest-timer-container")
+          .removeAttribute("hidden");
+        updateRestTimer();
+      }
+
+      function updateRestTimer() {
+        restTimerElement.innerText = `${restTimer}s`;
+        if (restTimer > 0) {
+          setTimeout(() => {
+            restTimer--;
+            updateRestTimer();
+          }, 1000);
+        } else {
+          endRestPeriod();
+        }
+      }
+
+      function endRestPeriod() {
+        isResting = false;
+        document
+          .getElementById("rest-timer-container")
+          .setAttribute("hidden", "");
+        console.log("Resting complete..");
+        startTime = Date.now();
+        restTimer = workout.rest_time;
+      }
+
       video.addEventListener("play", () => {
+        startTime = Date.now();
         const canvas = document.createElement("canvas");
         const context = canvas.getContext("2d");
-        const fps = 10;
-        const interval = 1000 / fps;
 
         const sendFrame = () => {
           if (video.paused || video.ended) {
-            console.log("Video paused or ended");
+            console.log("Video paused, ended.");
             return;
+          }
+
+          let timeSpent = (Date.now() - startTime) / 1000;
+          if (timeSpent >= workout.total_time && !isResting) {
+            endTime = Date.now();
+            isResting = true;
+            startRestPeriod();
+
+            fetch(`/api/v1/workouts/sessions`, {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+                Authorization: `Bearer ${accessToken}`,
+              },
+              body: JSON.stringify({
+                workout_id: workout.id,
+                start_time: (new Date(startTime)).toISOString(),
+                end_time: (new Date(endTime)).toISOString(),
+                repetitions: repetitions,
+              }),
+            })
+              .then((res) => {
+                if (res.status !== 200) {
+                  // handle token expiration
+                }
+              })
+              .catch((err) => {
+                console.error("Failed to complete workout", err);
+                alert("Failed to complete workout");
+              });
           }
 
           const aspectRatio = video.videoWidth / video.videoHeight;
@@ -140,11 +232,10 @@
             "image/jpeg",
             0.7
           );
-
           setTimeout(sendFrame, interval);
         };
-        sendFrame();
 
+        sendFrame();
         setInterval(updateTimer, 1000);
       });
     </script>
