--- a/server/app/templates/profile.html
+++ b/server/app/templates/profile.html
@@ -160,7 +160,7 @@
                 name="gender"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               >
-                <option value="male">Самец</option>
+                <option value="male">мужской</option>
                 <option value="female" selected>Женский</option>
                 <option value="others">Другие</option>
               </select>
