--- a/server/app/static/css/main.css
+++ b/server/app/static/css/main.css
@@ -313,9 +313,30 @@ textarea:focus {
   color: #7A6FF1;
 }
 
+.rotater {
+  display: none;
+  color: #fff;
+}
+
+@keyframes rot {
+  50% {
+    transform: rotate(90deg);
+  }
+
+}
+
 @media (max-width:1024px) {
+
+
+  .work-card {
+    position: relative;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
   .work-card .grid {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 2px;
 
   }
 
@@ -432,8 +453,9 @@ textarea:focus {
 
   .mar-100 {
     height: 100%;
-    margin: 40px;
     margin-top: 80px;
+    margin-left: 20px;
+    margin-right: 20px;
     margin-bottom: 120px;
     width: auto;
   }
@@ -444,7 +466,7 @@ textarea:focus {
   }
 
   .rec-video {
-    height: 400px;
+    height: 100%;
     grid-area: 1;
   }
 
@@ -475,6 +497,19 @@ textarea:focus {
 }
 
 @media (max-width:640px) {
+  .rotater {
+    width: 80%;
+    margin: auto;
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  .rotate {
+    width: 40px;
+    height: 40px;
+    animation: rot 5s infinite;
+  }
+
   .flex-c {
     display: flex;
     flex-direction: column;
@@ -495,9 +530,24 @@ textarea:focus {
   }
 
   .mar-100 {
-    margin: 25px;
     margin-top: 80px;
     margin-bottom: 120px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .work-card {
+    border-radius: 15px;
+    padding: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 35px;
+    background: #7A6FF1;
+  }
+
+  .work-card .grid {
+    grid-template-columns: 1.5fr 1fr;
+    gap: 2px;
   }
 
   .mob-nav-link {
